--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>I'm a web developer</h1>
     <hr>
     <a href="movie-ranking.html">Movie Ranking System</a><br>
-    <img src="snippet 1.JPG" alt="ranking ">
+    <img src="snippet 1.JPG" alt="ranking "><br>
     <a href="./birthday-invite.html">Birthday Invite link</a><br>
     <img src="./snippet2.JPG" alt="screenshot"><br>
     <a href="./about.html">About me</a><br>
